table fixes, footer

--- a/index.html
+++ b/index.html
@@ -123,13 +123,12 @@
 	</section>
 
 	<section class="table">
-	
 	<div class="container">
 		<div class="row">
-			<div class="col-md-1"></div>
-			<div class="col-md-10">
-			<h3 class="auto-title">Автомобили в наличии</h3>
-				<table>
+			<div class="col-md-12 col-md-offset-1">
+				<h3 class="auto-title">Автомобили в наличии</h3>
+				<div class="table-responsive">
+				<table class="table">
 					<tr>
 						<th>Название</th>
 						<th>Год</th>
@@ -139,10 +138,7 @@
 						<th></th>
 					</tr>
 					<tr>
-						<td>
-							1.6 MT Ambiente 85 л.с. МКПП
-							<span class="more-descr">+ доп. опция «Радио-навигационная система Amundasen 2DIN, CD, MP3</span>
-						</td>
+						<td>1.6 MT Ambiente 85 л.с. МКПП<span class="more-descr">+ доп. опция «Радио-навигационная система Amundasen 2DIN, CD, MP3</span></td>
 						<td>2012</td>
 						<td><div class="table-circle"></div></td>
 						<td>Ожидается</td>
@@ -156,7 +152,7 @@
 						<td>Ожидается</td>
 						<td>1 189 900 руб.</td>
 						<td><span class="table-inquiry">Запрос</span></td>
-											</tr>
+					</tr>
 					<tr>
 						<td>1.6 MT Trend 105 л.с. МКПП</td>
 						<td>2012</td>
@@ -185,10 +181,7 @@
 						
 					</tr>
 					<tr>
-						<td>
-							2.0 PowerShift Trend Sport 150 л.с. АКПП
-							<span class="more-descr">+ доп. опция «Радио-навигационная система Amundasen 2DIN, CD, MP3</span>
-						</td>
+						<td>2.0 PowerShift Trend Sport 150 л.с. АКПП<span class="more-descr">+ доп. опция «Радио-навигационная система Amundasen 2DIN, CD, MP3</span></td>
 						<td>2013</td>
 						<td><div class="table-circle green-circle"></td>
 						<td>Нет в наличии</td>
@@ -197,11 +190,24 @@
 						
 					</tr>
 		</table>
+		</div>
 			</div>
-			<div class="col-md-1"></div>
 		</div>
 	</div>
 	</section>
+
+	<footer>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<div class="copyright-wrap">
+						<span>© 2015 CAPTAIN QUACK<br>Десница тысячелетия и моллюск! </span>
+					</div>
+				</div>
+			</div>
+		</div>
+
+	</footer>
 	
 	<div class="hidden"></div>
 
