--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
 							<li><a href="#">Акции</li></a>
 							<li><a href="#">Услуги</li></a>
 						</ul>
+						<ul class="hide-mnu">
+							<li><a href="#">Подбор авто</a></li>
+							<li><a href="#">Автомобили с пробегом</a></li>
+							<li><a href="#">Карта цен</li></a>
+						</ul>
 					</div>
 				</div>
 			</div>
