slider, menu hover, blocks for slider

--- a/index.html
+++ b/index.html
@@ -124,7 +124,18 @@
 							</div>
 						</div>
 							<h1 class="burton-title">BURTON ЗИМА 2014</h1>
-					</div>		
+					</div>	
+					<div class="brand-item">
+							
+						<img src="img/gomer.jpg" alt="" class="cat-img">
+
+					</div>	
+					<div class="brand-item">
+							
+						<img src="img/review.jpg" alt="" class="cat-img">
+						<p class="review">Спасибо, что дали возможность проявить себя</p>
+
+					</div>	
 					</div>
 				</div>
 			</div>
@@ -233,7 +244,7 @@
 
 	<script src="libs/jquery/jquery-1.11.2.min.js"></script>
 	<script src="libs/modernizr/modernizr.js"></script>
-	
+	<script src="libs/owl/owl.carousel.min.js"></script>
 	<script src="js/common.js"></script>
 
 	<!-- Yandex.Metrika counter --><!-- /Yandex.Metrika counter -->
